# apphook

./: .gitignore  configure  configure.ac
src/: Makefile.am  Makefile.in  ah.c  cc.cmd  checkc.c  checkc2.c  strip.c  strip.h  test.c  trace.c
